# quicksnaps

./: .gitignore  README.md  index.html  manifest.json  pyproject.toml  quicksnaps.json  style.css
.github/workflows/: replay.yml
machines/005/: index.html
machines/005a/: index.html
machines/100in1rg/: index.html
machines/10yard/: index.html
machines/10yard85/: index.html
machines/10yardj/: index.html
machines/110dance/: index.html
machines/11beat/: index.html
machines/1292apvs/: index.html
machines/1392apvs/: index.html
machines/168pcase/: index.html
machines/18w/: index.html
machines/18w2/: index.html
machines/18wheelr/: index.html
machines/18wheelro/: index.html
machines/18wheelrt/: index.html
machines/18wheels/: index.html
machines/18wheelu/: index.html
machines/1941/: index.html
machines/1941j/: index.html
machines/1941r1/: index.html
machines/1941u/: index.html
machines/1942/: index.html
machines/1942a/: index.html
machines/1942abl/: index.html
machines/1942b/: index.html
machines/1942h/: index.html
machines/1942iti/: index.html
machines/1942p/: index.html
machines/1942w/: index.html
machines/1944/: index.html
machines/1944d/: index.html
machines/1944j/: index.html
machines/1944u/: index.html
machines/19xx/: index.html
machines/19xxa/: index.html
machines/19xxar1/: index.html
machines/19xxb/: index.html
machines/19xxd/: index.html
machines/32x/: index.html
scripts/: replay-artifacts.py
tests/: test_artifacts.py  test_cli.py  test_config.py  test_impact.py  test_runner.py  test_site.py
(+75177 files in other folders)
