[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "quicksnaps"
version = "0.1.0"
description = "Capture before and after screenshots for MAME changes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
quicksnaps = "quicksnaps.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quicksnaps = ["capture.lua"]
